--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Merged PDF</title>
+    <title>Junta PDF</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         .centered {
@@ -15,12 +15,12 @@
 <body>
 <div class="container centered">
     <div>
-        <h1 class="mb-3 text-center">Merged PDF</h1>
+        <h1 class="mb-3 text-center">Junta PDF</h1>
         <div class="alert alert-success text-center">
             PDFs foram mesclados com sucesso!
         </div>
         <div class="text-center">
-            <a th:href="@{'/download?path=' + ${filePath}}" class="btn btn-primary mb-3">Download Merged PDF</a>
+            <a th:href="@{'/download?path=' + ${filePath}}" class="btn btn-primary mb-3">Download PDF Mesclado</a>
             <a href="/" class="btn btn-secondary">Voltar para o início</a>
         </div>
     </div>
